# task_manager

./: .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py  models.py
app/alembic/: env.py
app/alembic/versions/: 2025_09_26_1638-7dad7c125f5c_initial.py
app/auth/: routes.py  schemas.py
app/users/: routes.py  schemas.py
train_random/: 1.py
